[gd_scene load_steps=7 format=3 uid="uid://dbhm70crwg8ui"]

[ext_resource type="Script" path="res://Stages/Levels/house_level.gd" id="1_jxpk6"]
[ext_resource type="PackedScene" uid="uid://dj53b06sf4sxy" path="res://Entities/players/player_house.tscn" id="1_yo7ni"]
[ext_resource type="PackedScene" uid="uid://bcklgjr2v6qjr" path="res://Entities/objects/Furnace/Furnace.tscn" id="4_478m1"]
[ext_resource type="TileSet" uid="uid://b2vrrmbvihc3b" path="res://tilesets/house.tres" id="4_tjgdf"]
[ext_resource type="PackedScene" uid="uid://6b07cvgy8iqh" path="res://UI/InventoryUI/Inventory_Panel.tscn" id="5_bxxio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lipq7"]
size = Vector2(30, 9)

[node name="HouseLevel" type="Node2D"]
process_mode = 3
script = ExtResource("1_jxpk6")

[node name="PlayerHouse" parent="." instance=ExtResource("1_yo7ni")]
z_index = 5
position = Vector2(40, 8)

[node name="Camera2D2" type="Camera2D" parent="PlayerHouse"]
zoom = Vector2(4, 4)
limit_top = -240
limit_bottom = 160
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="Tiles" type="TileMap" parent="."]
tile_set = ExtResource("4_tjgdf")
collision_animatable = true
format = 2
layer_0/name = "house walls"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-196606, 131074, 4, -131074, 131074, 4, -131073, 131074, 4, -196608, 131074, 4, -196607, 131074, 4, 65537, 393218, 7, 65536, 327682, 7, 131071, 524290, 7, 131070, 393218, 6, 65533, 196610, 2, 196606, 131074, 1, 196607, 131074, 1, 131072, 131074, 1, 131073, 65538, 7, 131074, 131074, 7, 65538, 524290, 7, -196605, 131074, 4, -196604, 131074, 4, -196603, 131074, 4, -196602, 131074, 4, -196601, 327682, 2, 7, 65538, 2, 65543, 65538, 2, 131078, 131074, 1, 131077, 131074, 1, 131076, 131074, 1, 131075, 196610, 7, 65542, 524290, 7, 65541, 458754, 7, 65540, 524290, 7, 65539, 524290, 7, -262143, 131074, 3, -262142, 131074, 3, -262141, 131074, 3, -262140, 131074, 3, -262139, 131074, 3, -262138, 131074, 3, -262137, 327682, 1, 196605, 262146, 3, 131079, 327682, 3, -262148, 131074, 2, -196612, 131074, 2, -131076, 131074, 2, -65540, 131074, 2, -4, 131074, 2, 65532, 131074, 2, 131068, 131074, 2, 196604, 131074, 2, 262140, 131074, 2, 262141, 131074, 2, 262142, 131074, 2, 262143, 131074, 2, 196608, 131074, 2, 196609, 131074, 2, 196610, 131074, 2, 196611, 131074, 2, 262148, 131074, 2, 262149, 131074, 2, 196613, 131074, 2, 196614, 131074, 2, 196615, 131074, 2, 196616, 131074, 2, 196612, 131074, 2, 131080, 131074, 2, 65544, 131074, 2, 8, 131074, 2, -196600, 131074, 2, -262136, 131074, 2, -327672, 131074, 2, -327673, 131074, 2, -327674, 131074, 2, -327675, 131074, 2, -327676, 131074, 2, -327677, 131074, 2, -327678, 131074, 2, -327679, 131074, 2, -327680, 131074, 2, -262145, 131074, 2, -262146, 131074, 2, -262147, 131074, 2, -327684, 131074, 2, -327685, 131074, 2, -327683, 131074, 2, -327682, 131074, 2, -327681, 131074, 2, -393216, 131074, 2, -393215, 131074, 2, -393214, 131074, 2, -393213, 131074, 2, -393212, 131074, 2, -393211, 131074, 2, -393210, 131074, 2, -393209, 131074, 2, -393208, 131074, 2, -393207, 131074, 2, -327671, 131074, 2, -262135, 131074, 2, -196599, 131074, 2, 9, 131074, 2, 65545, 131074, 2, 131081, 131074, 2, 196617, 131074, 2, 262153, 131074, 2, 262152, 131074, 2, 262151, 131074, 2, 262150, 131074, 2, 262147, 131074, 2, 262146, 131074, 2, 262145, 131074, 2, 262144, 131074, 2, 327679, 131074, 2, 327678, 131074, 2, 327677, 131074, 2, 327676, 131074, 2, 327675, 131074, 2, 262139, 131074, 2, 196603, 131074, 2, 131067, 131074, 2, 65531, 131074, 2, -5, 131074, 2, -65541, 131074, 2, -131077, 131074, 2, -196613, 131074, 2, -262149, 131074, 2, -393221, 131074, 2, -393220, 131074, 2, -393219, 131074, 2, -393218, 131074, 2, -393217, 131074, 2, -458752, 131074, 2, -458751, 131074, 2, -458750, 131074, 2, -458749, 131074, 2, -458748, 131074, 2, -458747, 131074, 2, -458746, 131074, 2, -458745, 131074, 2, -458744, 131074, 2, -458743, 131074, 2, -524279, 131074, 2, -524280, 131074, 2, -524281, 131074, 2, -524282, 131074, 2, -524283, 131074, 2, -524284, 131074, 2, -524285, 131074, 2, -524286, 131074, 2, -524287, 131074, 2, -524288, 131074, 2, -458753, 131074, 2, -458754, 131074, 2, -458755, 131074, 2, -458756, 131074, 2, -458757, 131074, 2, -524293, 131074, 2, -524292, 131074, 2, -524291, 131074, 2, -524290, 131074, 2, -524289, 131074, 2, -589824, 131074, 2, -589823, 131074, 2, -589822, 131074, 2, -589821, 131074, 2, -589820, 131074, 2, -589819, 131074, 2, -589818, 131074, 2, -589817, 131074, 2, -589816, 131074, 2, -589815, 131074, 2, -655352, 131074, 2, -655353, 131074, 2, -655354, 131074, 2, -655355, 131074, 2, -655356, 131074, 2, -655357, 131074, 2, -655351, 131074, 2, -655358, 131074, 2, -655359, 131074, 2, -655360, 131074, 2, -589825, 131074, 2, -589826, 131074, 2, -589827, 131074, 2, -589828, 131074, 2, -589829, 131074, 2, -655365, 131074, 2, -655364, 131074, 2, -655363, 131074, 2, -655362, 131074, 2, -655361, 131074, 2, -720896, 131074, 2, -720895, 131074, 2, -720894, 131074, 2, -720893, 131074, 2, -720892, 131074, 2, -720891, 131074, 2, -720890, 131074, 2, -720889, 131074, 2, -720888, 131074, 2, -720887, 131074, 2, -786423, 131074, 2, -786424, 131074, 2, -786425, 131074, 2, -786426, 131074, 2, -786427, 131074, 2, -786428, 131074, 2, -786429, 131074, 2, -786430, 131074, 2, -786431, 131074, 2, -786432, 131074, 2, -720897, 131074, 2, -720898, 131074, 2, -720899, 131074, 2, -720900, 131074, 2, -720901, 131074, 2, -720902, 131074, 2, -655366, 131074, 2, -589830, 131074, 2, -524294, 131074, 2, -458758, 131074, 2, -393222, 131074, 2, -327686, 131074, 2, -262150, 131074, 2, -196614, 131074, 2, -131078, 131074, 2, -131079, 131074, 2, -65543, 131074, 2, -7, 131074, 2, 65529, 131074, 2, 131065, 131074, 2, 196601, 131074, 2, 131066, 131074, 2, 65530, 131074, 2, -6, 131074, 2, -65542, 131074, 2, -262151, 131074, 2, -327687, 131074, 2, -393223, 131074, 2, -458759, 131074, 2, -524295, 131074, 2, -524296, 131074, 2, -589832, 131074, 2, -458760, 131074, 2, -393224, 131074, 2, -589831, 131074, 2, -655367, 131074, 2, -720903, 131074, 2, -786439, 131074, 2, -851975, 131074, 2, -196615, 131074, 2, -327688, 131074, 2, -262152, 131074, 2, -196616, 131074, 2, -131080, 131074, 2, -917511, 131074, 2, -851976, 131074, 2, -786440, 131074, 2, -720904, 131074, 2, -655368, 131074, 2, 262137, 131074, 2, 327673, 131074, 2, -8, 131074, 2, 65528, 131074, 2, 131064, 131074, 2, 196600, 131074, 2, 262136, 131074, 2, -65544, 131074, 2, 393209, 131074, 2, 458745, 131074, 2, 524281, 131074, 2, 393210, 131074, 2, 327674, 131074, 2, 262138, 131074, 2, 196602, 131074, 2, 327672, 131074, 2, 393208, 131074, 2, 393211, 131074, 2, 393212, 131074, 2, 393213, 131074, 2, 393214, 131074, 2, 393215, 131074, 2, 327680, 131074, 2, 327683, 131074, 2, 327682, 131074, 2, 327681, 131074, 2, 327684, 131074, 2, 327685, 131074, 2, 393222, 131074, 2, 393223, 131074, 2, 393221, 131074, 2, 393220, 131074, 2, 393219, 131074, 2, 393218, 131074, 2, 458753, 131074, 2, 458752, 131074, 2, 524287, 131074, 2, 458751, 131074, 2, 393216, 131074, 2, 393217, 131074, 2, 458758, 131074, 2, 458757, 131074, 2, 458756, 131074, 2, 458755, 131074, 2, 458754, 131074, 2, 524286, 131074, 2, 524285, 131074, 2, 524284, 131074, 2, 524283, 131074, 2, 524282, 131074, 2, 524280, 131074, 2, 458759, 131074, 2, 458760, 131074, 2, 458761, 131074, 2, 524290, 131074, 2, 524289, 131074, 2, 524288, 131074, 2, 589823, 131074, 2, 589822, 131074, 2, 589818, 131074, 2, 589817, 131074, 2, 589816, 131074, 2, 655351, 131074, 2, 655352, 131074, 2, 655353, 131074, 2, 655354, 131074, 2, 655355, 131074, 2, 655356, 131074, 2, 589821, 131074, 2, 458750, 131074, 2, 589820, 131074, 2, 458749, 131074, 2, 589819, 131074, 2, 458748, 131074, 2, 458747, 131074, 2, 458746, 131074, 2, 655357, 131074, 2, 655358, 131074, 2, 589824, 131074, 2, 589825, 131074, 2, 589826, 131074, 2, 589827, 131074, 2, 589828, 131074, 2, 589829, 131074, 2, 589830, 131074, 2, 589831, 131074, 2, 589832, 131074, 2, 589833, 131074, 2, 589834, 131074, 2, 589835, 131074, 2, 524299, 131074, 2, 524298, 131074, 2, 524292, 131074, 2, 524291, 131074, 2, 524295, 131074, 2, 720893, 131074, 2, 720894, 131074, 2, 720895, 131074, 2, 655360, 131074, 2, 655361, 131074, 2, 655362, 131074, 2, 655363, 131074, 2, 655364, 131074, 2, 524297, 131074, 2, 524296, 131074, 2, 524294, 131074, 2, 524293, 131074, 2, 524300, 131074, 2, 524301, 131074, 2, 458765, 131074, 2, 458764, 131074, 2, 393227, 131074, 2, 393226, 131074, 2, 393225, 131074, 2, 393224, 131074, 2, 327688, 131074, 2, 327687, 131074, 2, 327686, 131074, 2, 327690, 131074, 2, 327689, 131074, 2, 327691, 131074, 2, 458762, 131074, 2, 655368, 131074, 2, 655367, 131074, 2, 720903, 131074, 2, 720902, 131074, 2, 655366, 131074, 2, 655365, 131074, 2, 524279, 131074, 2, 524278, 131074, 2, 524277, 131074, 2, 720892, 131074, 2, 720891, 131074, 2, 655359, 131074, 2, 720890, 131074, 2, 720889, 131074, 2, 786428, 131074, 2, 786429, 131074, 2, 786430, 131074, 2, 786431, 131074, 2, 720896, 131074, 2, 720897, 131074, 2, 720898, 131074, 2, 720899, 131074, 2, 720900, 131074, 2, 720901, 131074, 2, 720904, 131074, 2, 720905, 131074, 2, 720906, 131074, 2, 655371, 131074, 2, 655372, 131074, 2, 589837, 131074, 2, 589838, 131074, 2, 589836, 131074, 2, 393229, 131074, 2, 393228, 131074, 2, 655369, 131074, 2, 655370, 131074, 2, 458763, 131074, 2, 327692, 131074, 2, 262155, 131074, 2, 262154, 131074, 2, 262156, 131074, 2, 196620, 131074, 2, 131084, 131074, 2, 65548, 131074, 2, 131083, 131074, 2, 196619, 131074, 2, 327693, 131074, 2, 262157, 131074, 2, 262158, 131074, 2, 196622, 131074, 2, 131086, 131074, 2, 131087, 131074, 2, 65551, 131074, 2, 131085, 131074, 2, 65549, 131074, 2, -131059, 131074, 2, -196595, 131074, 2, -131060, 131074, 2, 65547, 131074, 2, -131061, 131074, 2, 10, 131074, 2, 65546, 131074, 2, -196597, 131074, 2, -196596, 131074, 2, -262132, 131074, 2, -262133, 131074, 2, 131082, 131074, 2, -196598, 131074, 2, -262134, 131074, 2, -393205, 131074, 2, -327669, 131074, 2, -393204, 131074, 2, -458740, 131074, 2, -524276, 131074, 2, -589813, 131074, 2, -524277, 131074, 2, -524278, 131074, 2, -458742, 131074, 2, -393206, 131074, 2, -327670, 131074, 2, -458741, 131074, 2, -655349, 131074, 2, -720885, 131074, 2, -786421, 131074, 2, -786422, 131074, 2, -720886, 131074, 2, -655350, 131074, 2, -589814, 131074, 2, -851957, 131074, 2, -655348, 131074, 2, -720884, 131074, 2, -786420, 131074, 2, -589812, 131074, 2, -589811, 131074, 2, -655347, 131074, 2, -524275, 131074, 2, -327668, 131074, 2, -720883, 131074, 2, -786419, 131074, 2, -458739, 131074, 2, -393203, 131074, 2, -327667, 131074, 2, -262131, 131074, 2, -262130, 131074, 2, -327666, 131074, 2, -393202, 131074, 2, -458738, 131074, 2, -524274, 131074, 2, -524273, 131074, 2, -196594, 131074, 2, -131058, 131074, 2, 196621, 131074, 2, -589809, 131074, 2, -655345, 131074, 2, -720881, 131074, 2, -458737, 131074, 2, -393201, 131074, 2, -589810, 131074, 2, -655346, 131074, 2, -720882, 131074, 2, -786418, 131074, 2, -262129, 131074, 2, -327665, 131074, 2, -196593, 131074, 2, -131057, 131074, 2, 65550, 131074, 2, 196618, 131074, 2, 393230, 131074, 2, 327694, 131074, 2, -851955, 131074, 2, -851956, 131074, 2, -851958, 131074, 2, -851959, 131074, 2, -851960, 131074, 2, -851961, 131074, 2, -851962, 131074, 2, -851963, 131074, 2, -851964, 131074, 2, -851965, 131074, 2, -720905, 131074, 2, -720906, 131074, 2, -720907, 131074, 2, -720908, 131074, 2, -851966, 131074, 2, -786436, 131074, 2, -786437, 131074, 2, -786435, 131074, 2, -786434, 131074, 2, -786433, 131074, 2, -851968, 131074, 2, -851967, 131074, 2, -917497, 131074, 2, -917496, 131074, 2, -917495, 131074, 2, -917494, 131074, 2, -917498, 131074, 2, -917499, 131074, 2, -917500, 131074, 2, -917501, 131074, 2, -917502, 131074, 2, -917503, 131074, 2, -917504, 131074, 2, -851969, 131074, 2, -851970, 131074, 2, -851971, 131074, 2, -851972, 131074, 2, -851973, 131074, 2, -851974, 131074, 2, -851977, 131074, 2, -786438, 131074, 2, -851954, 131074, 2, -917490, 131074, 2, -917489, 131074, 2, -917491, 131074, 2, -917492, 131074, 2, -917493, 131074, 2, 458744, 131074, 2, 720888, 131074, 2, 786424, 131074, 2, 851960, 131074, 2, 851961, 131074, 2, 851962, 131074, 2, 786426, 131074, 2, 786427, 131074, 2, 786425, 131074, 2, 851963, 131074, 2, 851964, 131074, 2, 851965, 131074, 2, 851966, 131074, 2, 851967, 131074, 2, 786432, 131074, 2, 786433, 131074, 2, 786434, 131074, 2, 786435, 131074, 2, 786436, 131074, 2, 786437, 131074, 2, 786438, 131074, 2, 786439, 131074, 2, 786440, 131074, 2, 786441, 131074, 2, 786442, 131074, 2, 786443, 131074, 2, 786444, 131074, 2, 720909, 131074, 2, 655373, 131074, 2, 720908, 131074, 2, 720907, 131074, 2, 720910, 131074, 2, 655374, 131074, 2, 786446, 131074, 2, 786445, 131074, 2, 524302, 131074, 2, 458766, 131074, 2, 196623, 131074, 2, 262159, 131074, 2, 327695, 131074, 2, 393231, 131074, 2, 458767, 131074, 2, 524303, 131074, 2, 589839, 131074, 2, 655375, 131074, 2, 720911, 131074, 2, 786447, 131074, 2, 786423, 131074, 2, 786422, 131074, 2, 851958, 131074, 2, 851959, 131074, 2, 720887, 131074, 2, 589815, 131074, 2, 458743, 131074, 2, 393207, 131074, 2, 327671, 131074, 2, 262135, 131074, 2, 196599, 131074, 2, 131063, 131074, 2, 65527, 131074, 2, -262153, 131074, 2, -327689, 131074, 2, -196617, 131074, 2, -131081, 131074, 2, -65545, 131074, 2, -9, 131074, 2, -393225, 131074, 2, -458761, 131074, 2, -524297, 131074, 2, -589833, 131074, 2, -655369, 131074, 2, -786441, 131074, 2, -851978, 131074, 2, -786442, 131074, 2, -655370, 131074, 2, -589834, 131074, 2, -524298, 131074, 2, -458762, 131074, 2, -393226, 131074, 2, -327690, 131074, 2, -262154, 131074, 2, -196618, 131074, 2, -131082, 131074, 2, -65546, 131074, 2, -10, 131074, 2, 65526, 131074, 2, 131062, 131074, 2, 196598, 131074, 2, 262134, 131074, 2, 327670, 131074, 2, 393206, 131074, 2, 458742, 131074, 2, 589814, 131074, 2, 655350, 131074, 2, 720886, 131074, 2, -786443, 131074, 2, -917507, 131074, 2, -917508, 131074, 2, -917509, 131074, 2, -917510, 131074, 2, -851979, 131074, 2, -786444, 131074, 2, -655372, 131074, 2, -589836, 131074, 2, -524300, 131074, 2, -524299, 131074, 2, -1179661, 131074, 2, -1114125, 131074, 2, -1048589, 131074, 2, -983053, 131074, 2, -917517, 131074, 2, -851981, 131074, 2, -786445, 131074, 2, -720909, 131074, 2, -655373, 131074, 2, -589837, 131074, 2, -524301, 131074, 2, -458765, 131074, 2, -393229, 131074, 2, -327693, 131074, 2, -262157, 131074, 2, -196621, 131074, 2, -131085, 131074, 2, -65549, 131074, 2, -13, 131074, 2, 65523, 131074, 2, 131059, 131074, 2, 196595, 131074, 2, 262131, 131074, 2, 327667, 131074, 2, 393203, 131074, 2, 458739, 131074, 2, 524275, 131074, 2, 589811, 131074, 2, 655347, 131074, 2, 720883, 131074, 2, 786419, 131074, 2, 851955, 131074, 2, 917491, 131074, 2, 983027, 131074, 2, 1048563, 131074, 2, 1114099, 131074, 2, -1179660, 131074, 2, -1114124, 131074, 2, -1048588, 131074, 2, -983052, 131074, 2, -917516, 131074, 2, -851980, 131074, 2, -458764, 131074, 2, -393228, 131074, 2, -327692, 131074, 2, -262156, 131074, 2, -196620, 131074, 2, -131084, 131074, 2, -65548, 131074, 2, -12, 131074, 2, 65524, 131074, 2, 131060, 131074, 2, 196596, 131074, 2, 262132, 131074, 2, 327668, 131074, 2, 393204, 131074, 2, 458740, 131074, 2, 524276, 131074, 2, 589812, 131074, 2, 655348, 131074, 2, 720884, 131074, 2, 786420, 131074, 2, 851956, 131074, 2, 917492, 131074, 2, 983028, 131074, 2, 1048564, 131074, 2, 1114100, 131074, 2, -1179659, 131074, 2, -1114123, 131074, 2, -1048587, 131074, 2, -983051, 131074, 2, -917515, 131074, 2, -655371, 131074, 2, -589835, 131074, 2, -458763, 131074, 2, -393227, 131074, 2, -327691, 131074, 2, -262155, 131074, 2, -196619, 131074, 2, -131083, 131074, 2, -65547, 131074, 2, -11, 131074, 2, 65525, 131074, 2, 131061, 131074, 2, 196597, 131074, 2, 262133, 131074, 2, 327669, 131074, 2, 393205, 131074, 2, 458741, 131074, 2, 589813, 131074, 2, 655349, 131074, 2, 720885, 131074, 2, 786421, 131074, 2, 851957, 131074, 2, 917493, 131074, 2, 983029, 131074, 2, 1048565, 131074, 2, 1114101, 131074, 2, -1179658, 131074, 2, -1114122, 131074, 2, -1048586, 131074, 2, -983050, 131074, 2, -917514, 131074, 2, 917494, 131074, 2, 983030, 131074, 2, 1048566, 131074, 2, 1114102, 131074, 2, -1179657, 131074, 2, -1114121, 131074, 2, -1048585, 131074, 2, -983049, 131074, 2, -917513, 131074, 2, 917495, 131074, 2, 983031, 131074, 2, 1048567, 131074, 2, 1114103, 131074, 2, -1179656, 131074, 2, -1114120, 131074, 2, -1048584, 131074, 2, -983048, 131074, 2, -917512, 131074, 2, 917496, 131074, 2, 983032, 131074, 2, 1048568, 131074, 2, 1114104, 131074, 2, -1179655, 131074, 2, -1114119, 131074, 2, -1048583, 131074, 2, -983047, 131074, 2, 917497, 131074, 2, 983033, 131074, 2, 1048569, 131074, 2, 1114105, 131074, 2, -1179654, 131074, 2, -1114118, 131074, 2, -1048582, 131074, 2, -983046, 131074, 2, 917498, 131074, 2, 983034, 131074, 2, 1048570, 131074, 2, 1114106, 131074, 2, -1179653, 131074, 2, -1114117, 131074, 2, -1048581, 131074, 2, -983045, 131074, 2, 917499, 131074, 2, 983035, 131074, 2, 1048571, 131074, 2, 1114107, 131074, 2, -1179652, 131074, 2, -1114116, 131074, 2, -1048580, 131074, 2, -983044, 131074, 2, 917500, 131074, 2, 983036, 131074, 2, 1048572, 131074, 2, 1114108, 131074, 2, -1179651, 131074, 2, -1114115, 131074, 2, -1048579, 131074, 2, -983043, 131074, 2, 917501, 131074, 2, 983037, 131074, 2, 1048573, 131074, 2, 1114109, 131074, 2, -1179650, 131074, 2, -1114114, 131074, 2, -1048578, 131074, 2, -983042, 131074, 2, -917506, 131074, 2, 917502, 131074, 2, 983038, 131074, 2, 1048574, 131074, 2, 1114110, 131074, 2, -1179649, 131074, 2, -1114113, 131074, 2, -1048577, 131074, 2, -983041, 131074, 2, -917505, 131074, 2, 917503, 131074, 2, 983039, 131074, 2, 1048575, 131074, 2, 1114111, 131074, 2, -1245184, 131074, 2, -1179648, 131074, 2, -1114112, 131074, 2, -1048576, 131074, 2, -983040, 131074, 2, 851968, 131074, 2, 917504, 131074, 2, 983040, 131074, 2, 1048576, 131074, 2, -1245183, 131074, 2, -1179647, 131074, 2, -1114111, 131074, 2, -1048575, 131074, 2, -983039, 131074, 2, 851969, 131074, 2, 917505, 131074, 2, 983041, 131074, 2, 1048577, 131074, 2, -1245182, 131074, 2, -1179646, 131074, 2, -1114110, 131074, 2, -1048574, 131074, 2, -983038, 131074, 2, 851970, 131074, 2, 917506, 131074, 2, 983042, 131074, 2, 1048578, 131074, 2, -1245181, 131074, 2, -1179645, 131074, 2, -1114109, 131074, 2, -1048573, 131074, 2, -983037, 131074, 2, 851971, 131074, 2, 917507, 131074, 2, 983043, 131074, 2, 1048579, 131074, 2, -1245180, 131074, 2, -1179644, 131074, 2, -1114108, 131074, 2, -1048572, 131074, 2, -983036, 131074, 2, 851972, 131074, 2, 917508, 131074, 2, 983044, 131074, 2, 1048580, 131074, 2, -1245179, 131074, 2, -1179643, 131074, 2, -1114107, 131074, 2, -1048571, 131074, 2, -983035, 131074, 2, 851973, 131074, 2, 917509, 131074, 2, 983045, 131074, 2, 1048581, 131074, 2, -1245178, 131074, 2, -1179642, 131074, 2, -1114106, 131074, 2, -1048570, 131074, 2, -983034, 131074, 2, 851974, 131074, 2, 917510, 131074, 2, 983046, 131074, 2, 1048582, 131074, 2, -1245177, 131074, 2, -1179641, 131074, 2, -1114105, 131074, 2, -1048569, 131074, 2, -983033, 131074, 2, 851975, 131074, 2, 917511, 131074, 2, 983047, 131074, 2, 1048583, 131074, 2, -1245176, 131074, 2, -1179640, 131074, 2, -1114104, 131074, 2, -1048568, 131074, 2, -983032, 131074, 2, 851976, 131074, 2, 917512, 131074, 2, 983048, 131074, 2, 1048584, 131074, 2, -1245175, 131074, 2, -1179639, 131074, 2, -1114103, 131074, 2, -1048567, 131074, 2, -983031, 131074, 2, 851977, 131074, 2, 917513, 131074, 2, 983049, 131074, 2, 1048585, 131074, 2, -1245174, 131074, 2, -1179638, 131074, 2, -1114102, 131074, 2, -1048566, 131074, 2, -983030, 131074, 2, 851978, 131074, 2, 917514, 131074, 2, 983050, 131074, 2, 1048586, 131074, 2, -1245173, 131074, 2, -1179637, 131074, 2, -1114101, 131074, 2, -1048565, 131074, 2, -983029, 131074, 2, 851979, 131074, 2, 917515, 131074, 2, 983051, 131074, 2, 1048587, 131074, 2, -1245172, 131074, 2, -1179636, 131074, 2, -1114100, 131074, 2, -1048564, 131074, 2, -983028, 131074, 2, 851980, 131074, 2, 917516, 131074, 2, 983052, 131074, 2, 1048588, 131074, 2, -1245171, 131074, 2, -1179635, 131074, 2, -1114099, 131074, 2, -1048563, 131074, 2, -983027, 131074, 2, 851981, 131074, 2, 917517, 131074, 2, 983053, 131074, 2, 1048589, 131074, 2, -1245170, 131074, 2, -1179634, 131074, 2, -1114098, 131074, 2, -1048562, 131074, 2, -983026, 131074, 2, 851982, 131074, 2, 917518, 131074, 2, 983054, 131074, 2, 1048590, 131074, 2, -1245169, 131074, 2, -1179633, 131074, 2, -1114097, 131074, 2, -1048561, 131074, 2, -983025, 131074, 2, -851953, 131074, 2, -786417, 131074, 2, 851983, 131074, 2, 917519, 131074, 2, 983055, 131074, 2, 1048591, 131074, 2, -1245168, 131074, 2, -1179632, 131074, 2, -1114096, 131074, 2, -1048560, 131074, 2, -983024, 131074, 2, -917488, 131074, 2, -851952, 131074, 2, -786416, 131074, 2, -720880, 131074, 2, -655344, 131074, 2, -589808, 131074, 2, -524272, 131074, 2, -458736, 131074, 2, -393200, 131074, 2, -327664, 131074, 2, -262128, 131074, 2, -196592, 131074, 2, -131056, 131074, 2, 65552, 131074, 2, 131088, 131074, 2, 196624, 131074, 2, 262160, 131074, 2, 327696, 131074, 2, 393232, 131074, 2, 458768, 131074, 2, 524304, 131074, 2, 589840, 131074, 2, 655376, 131074, 2, 720912, 131074, 2, 786448, 131074, 2, 851984, 131074, 2, 917520, 131074, 2, 983056, 131074, 2, 1048592, 131074, 2, -1245167, 131074, 2, -1179631, 131074, 2, -1114095, 131074, 2, -1048559, 131074, 2, -983023, 131074, 2, -917487, 131074, 2, -851951, 131074, 2, -786415, 131074, 2, -720879, 131074, 2, -655343, 131074, 2, -589807, 131074, 2, -524271, 131074, 2, -458735, 131074, 2, -393199, 131074, 2, -327663, 131074, 2, -262127, 131074, 2, -196591, 131074, 2, -131055, 131074, 2, 65553, 131074, 2, 131089, 131074, 2, 196625, 131074, 2, 262161, 131074, 2, 327697, 131074, 2, 393233, 131074, 2, 458769, 131074, 2, 524305, 131074, 2, 589841, 131074, 2, 655377, 131074, 2, 720913, 131074, 2, 786449, 131074, 2, 851985, 131074, 2, 917521, 131074, 2, 983057, 131074, 2, 1048593, 131074, 2, -1245166, 131074, 2, -1179630, 131074, 2, -1114094, 131074, 2, -1048558, 131074, 2, -983022, 131074, 2, -917486, 131074, 2, -851950, 131074, 2, -786414, 131074, 2, -720878, 131074, 2, -655342, 131074, 2, -589806, 131074, 2, -524270, 131074, 2, -458734, 131074, 2, -393198, 131074, 2, -327662, 131074, 2, -262126, 131074, 2, -196590, 131074, 2, -131054, 131074, 2, 65554, 131074, 2, 131090, 131074, 2, 196626, 131074, 2, 262162, 131074, 2, 327698, 131074, 2, 393234, 131074, 2, 458770, 131074, 2, 524306, 131074, 2, 589842, 131074, 2, 655378, 131074, 2, 720914, 131074, 2, 786450, 131074, 2, 851986, 131074, 2, 917522, 131074, 2, 983058, 131074, 2, 1048594, 131074, 2, -65538, 524290, 7, -65534, 524290, 7, -65535, 524290, 7, -65536, 327682, 5, -65537, 458754, 5, -131072, 524290, 7, -131071, 524290, 7, -131070, 262146, 6, -131069, 327682, 6, -131068, 524290, 7, -131067, 524290, 7, -131066, 524290, 7, -65530, 524290, 7, -65531, 393218, 6, -65533, 262146, 5, 65535, 524290, 7, 0, 327682, 6, 1, 393218, 6, 2, 524290, 7, 3, 327682, 6, 4, 524290, 7, 5, 458754, 6, 6, 524290, 6, -196611, 262146, 1, -65539, 196610, 2, -3, 196610, 2, 131069, 196610, 2, -65529, 65538, 2, -131065, 65538, 2, -1, 262146, 6, 65534, 393218, 5, -2, 524290, 7, -65532, 327682, 6, -262144, 131074, 3, -196609, 131074, 3, -196610, 131074, 3, -131075, 262146, 2, -131063, 131074, 2, -131064, 131074, 2, -65528, 131074, 2, -65527, 131074, 2, -131062, 131074, 2, -65526, 131074, 2, -65525, 131074, 2, 11, 131074, 2, 12, 131074, 2, -65523, 131074, 2, 13, 131074, 2, -65524, 131074, 2, 14, 131074, 2, 15, 131074, 2, -65521, 131074, 2, -65522, 131074, 2, -65520, 131074, 2, -65519, 131074, 2, -65518, 131074, 2, -65517, 131074, 2, 19, 131074, 2, 18, 131074, 2, 17, 131074, 2, 16, 131074, 2)
layer_1/name = "objects"
layer_1/tile_data = PackedInt32Array(-1, 65536, 1, 65535, 65536, 2, -65536, 65537, 5, 0, 65537, 6, 65536, 65537, 7, -65535, 131073, 5, 1, 131073, 6, 65537, 131073, 7, -65534, 131073, 5, 2, 131073, 6, 65538, 131073, 7, -65533, 131073, 5, 3, 131073, 6, 65539, 131073, 7, -65532, 196609, 5, 4, 196609, 6, 65540, 196609, 7, -131072, 393217, 4, 5, 524289, 1, 65541, 524289, 2, 6, 655361, 1, 65542, 655361, 2, -131074, 393217, 5, -65538, 393217, 6, -131073, 458753, 5, -65537, 458753, 6)

[node name="ExitArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D"]
position = Vector2(40, 44.5)
shape = SubResource("RectangleShape2D_lipq7")

[node name="Furnace" parent="." instance=ExtResource("4_478m1")]
position = Vector2(66, -28)

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="InventoryPanel" parent="InventoryUI" instance=ExtResource("5_bxxio")]

[connection signal="area_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_area_entered"]
[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_body_entered"]
[connection signal="inventory_opened" from="Furnace" to="." method="_on_furnace_inventory_opened"]
[connection signal="inventory_closed" from="InventoryUI/InventoryPanel" to="." method="_on_inventory_panel_inventory_closed"]
